ZScript/gen/ZScriptParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:/Users/Luiz Fernando/Documents/Visual Studio 2013/Engines/ZScript/ZScript\ZScript.g4 by ANTLR 4.5

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5")]
[System.CLSCompliant(false)]
public partial class ZScriptParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, StringLiteral=4, DoubleQuoteEscape=5, SingleQuoteEscape=6, 
		T_EXPORT=7, T_FUNCTION=8, T_OVERRIDE=9, T_OBJECT=10, T_SEQUENCE=11, T_THIS=12, 
		T_BASE=13, T_VAR=14, T_LET=15, T_CONST=16, T_NEW=17, T_IS=18, T_IF=19, 
		T_ELSE=20, T_WHILE=21, T_FOR=22, T_BREAK=23, T_CONTINUE=24, T_SWITCH=25, 
		T_CASE=26, T_DEFAULT=27, T_RETURN=28, T_LEFT_PAREN=29, T_RIGHT_PAREN=30, 
		T_LEFT_BRACKET=31, T_RIGHT_BRACKET=32, T_LEFT_CURLY=33, T_RIGHT_CURLY=34, 
		T_CLOSURE_RETURN=35, T_CLOSURE_CALL=36, T_NULL_COALESCE=37, T_NULL_CONDITIONAL=38, 
		T_INT=39, T_FLOAT=40, T_VOID=41, T_ANY=42, T_STRING=43, T_BOOL=44, INT=45, 
		HEX=46, BINARY=47, FLOAT=48, T_FALSE=49, T_TRUE=50, T_NULL=51, T_QUOTES=52, 
		T_DOUBLE_QUOTES=53, T_TRIPPLE_DOT=54, T_DOUBLE_COLON=55, T_SEMICOLON=56, 
		T_PERIOD=57, T_COMMA=58, T_MULT=59, T_DIV=60, T_MOD=61, T_NOT=62, T_PLUS=63, 
		T_MINUS=64, T_INCREMENT=65, T_DECREMENT=66, T_BITWISE_AND=67, T_BITWISE_XOR=68, 
		T_BITWISE_OR=69, T_SHIFTLEFT=70, T_SHIFTRIGHT=71, T_EQUALITY=72, T_UNEQUALITY=73, 
		T_MORE_THAN_OR_EQUALS=74, T_LESS_THAN_OR_EQUALS=75, T_MORE_THAN=76, T_LESS_THAN=77, 
		T_LOGICAL_AND=78, T_LOGICAL_OR=79, T_EQUALS=80, T_PLUS_EQUALS=81, T_MINUS_EQUALS=82, 
		T_TIMES_EQUALS=83, T_DIV_EQUALS=84, T_MOD_EQUALS=85, T_XOR_EQUALS=86, 
		T_AND_EQUALS=87, T_TILDE_EQUALS=88, T_OR_EQUALS=89, T_SHIFTLEFT_EQUALS=90, 
		T_SHIFTRIGHT_EQUALS=91, IDENT=92, Whitespace=93, Newline=94, BlockComment=95, 
		LineComment=96, ImportDirective=97;
	public const int
		RULE_program = 0, RULE_scriptBody = 1, RULE_classDefinition = 2, RULE_classInherit = 3, 
		RULE_className = 4, RULE_classBody = 5, RULE_classField = 6, RULE_classMethod = 7, 
		RULE_globalVariable = 8, RULE_sequenceBlock = 9, RULE_sequenceName = 10, 
		RULE_sequenceBody = 11, RULE_sequenceFrame = 12, RULE_sequenceFrameChange = 13, 
		RULE_frameName = 14, RULE_frameRange = 15, RULE_frameRangeElement = 16, 
		RULE_frameNumber = 17, RULE_functionDefinition = 18, RULE_exportDefinition = 19, 
		RULE_functionName = 20, RULE_functionBody = 21, RULE_functionArguments = 22, 
		RULE_argumentList = 23, RULE_returnType = 24, RULE_functionArg = 25, RULE_argumentName = 26, 
		RULE_typeAlias = 27, RULE_typeAliasBody = 28, RULE_typeAliasVariable = 29, 
		RULE_typeAliasFunction = 30, RULE_typeAliasName = 31, RULE_typeAliasInherit = 32, 
		RULE_statement = 33, RULE_blockStatement = 34, RULE_ifStatement = 35, 
		RULE_elseStatement = 36, RULE_switchStatement = 37, RULE_switchBlock = 38, 
		RULE_caseBlock = 39, RULE_defaultBlock = 40, RULE_whileStatement = 41, 
		RULE_forStatement = 42, RULE_forInit = 43, RULE_forCondition = 44, RULE_forIncrement = 45, 
		RULE_returnStatement = 46, RULE_breakStatement = 47, RULE_continueStatement = 48, 
		RULE_valueDeclareStatement = 49, RULE_valueHolderDecl = 50, RULE_valueHolderName = 51, 
		RULE_type = 52, RULE_objectType = 53, RULE_typeName = 54, RULE_complexTypeName = 55, 
		RULE_primitiveType = 56, RULE_callableType = 57, RULE_listType = 58, RULE_dictionaryType = 59, 
		RULE_callableTypeList = 60, RULE_callableArgType = 61, RULE_expression = 62, 
		RULE_multOp = 63, RULE_additionOp = 64, RULE_bitwiseShift = 65, RULE_bitwiseAndOp = 66, 
		RULE_bitwiseXOrOp = 67, RULE_bitwiseOrOp = 68, RULE_relationalOp = 69, 
		RULE_equalityOp = 70, RULE_logicalAnd = 71, RULE_logicalOr = 72, RULE_assignmentExpression = 73, 
		RULE_newExpression = 74, RULE_closureExpression = 75, RULE_prefixOperator = 76, 
		RULE_postfixOperator = 77, RULE_unaryOperator = 78, RULE_assignmentOperator = 79, 
		RULE_funcCallArguments = 80, RULE_expressionList = 81, RULE_leftValue = 82, 
		RULE_leftValueAccess = 83, RULE_functionCall = 84, RULE_fieldAccess = 85, 
		RULE_arrayAccess = 86, RULE_objectAccess = 87, RULE_valueAccess = 88, 
		RULE_memberName = 89, RULE_arrayLiteral = 90, RULE_dictionaryLiteral = 91, 
		RULE_objectLiteral = 92, RULE_stringLiteral = 93, RULE_dictionaryEntryList = 94, 
		RULE_dictionaryEntry = 95, RULE_objectEntryList = 96, RULE_objectEntryDefinition = 97, 
		RULE_entryName = 98, RULE_compileConstant = 99, RULE_constantAtom = 100, 
		RULE_numericAtom = 101, RULE_hexadecimalNumber = 102, RULE_binaryNumber = 103;
	public static readonly string[] ruleNames = {
		"program", "scriptBody", "classDefinition", "classInherit", "className", 
		"classBody", "classField", "classMethod", "globalVariable", "sequenceBlock", 
		"sequenceName", "sequenceBody", "sequenceFrame", "sequenceFrameChange", 
		"frameName", "frameRange", "frameRangeElement", "frameNumber", "functionDefinition", 
		"exportDefinition", "functionName", "functionBody", "functionArguments", 
		"argumentList", "returnType", "functionArg", "argumentName", "typeAlias", 
		"typeAliasBody", "typeAliasVariable", "typeAliasFunction", "typeAliasName", 
		"typeAliasInherit", "statement", "blockStatement", "ifStatement", "elseStatement", 
		"switchStatement", "switchBlock", "caseBlock", "defaultBlock", "whileStatement", 
		"forStatement", "forInit", "forCondition", "forIncrement", "returnStatement", 
		"breakStatement", "continueStatement", "valueDeclareStatement", "valueHolderDecl", 
		"valueHolderName", "type", "objectType", "typeName", "complexTypeName", 
		"primitiveType", "callableType", "listType", "dictionaryType", "callableTypeList", 
		"callableArgType", "expression", "multOp", "additionOp", "bitwiseShift", 
		"bitwiseAndOp", "bitwiseXOrOp", "bitwiseOrOp", "relationalOp", "equalityOp", 
		"logicalAnd", "logicalOr", "assignmentExpression", "newExpression", "closureExpression", 
		"prefixOperator", "postfixOperator", "unaryOperator", "assignmentOperator", 
		"funcCallArguments", "expressionList", "leftValue", "leftValueAccess", 
		"functionCall", "fieldAccess", "arrayAccess", "objectAccess", "valueAccess", 
		"memberName", "arrayLiteral", "dictionaryLiteral", "objectLiteral", "stringLiteral", 
		"dictionaryEntryList", "dictionaryEntry", "objectEntryList", "objectEntryDefinition", 
		"entryName", "compileConstant", "constantAtom", "numericAtom", "hexadecimalNumber", 
		"binaryNumber"
	};

	private static readonly string[] _LiteralNames = {
		null, "'class'", "'typeAlias'", "'<-'", null, null, null, "'@'", "'func'", 
		"'override'", "'object'", "'sequence'", "'this'", "'base'", "'var'", "'let'", 
		"'const'", "'new'", "'is'", "'if'", "'else'", "'while'", "'for'", "'break'", 
		"'continue'", "'switch'", "'case'", "'default'", "'return'", "'('", "')'", 
		"'['", "']'", "'{'", "'}'", "'->'", "'=>'", "'??'", "'?'", "'int'", "'float'", 
		"'void'", "'any'", "'string'", "'bool'", null, null, null, null, "'false'", 
		"'true'", "'null'", "'''", "'\"'", "'...'", "':'", "';'", "'.'", "','", 
		"'*'", "'/'", "'%'", "'!'", "'+'", "'-'", "'++'", "'--'", "'&'", "'^'", 
		"'|'", null, null, "'=='", "'!='", "'>='", "'<='", "'>'", "'<'", "'&&'", 
		"'||'", "'='", "'+='", "'-='", "'*='", "'/='", "'%='", "'^='", "'&='", 
		"'~='", "'|='", "'<<='", "'>>='"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, "StringLiteral", "DoubleQuoteEscape", "SingleQuoteEscape", 
		"T_EXPORT", "T_FUNCTION", "T_OVERRIDE", "T_OBJECT", "T_SEQUENCE", "T_THIS", 
		"T_BASE", "T_VAR", "T_LET", "T_CONST", "T_NEW", "T_IS", "T_IF", "T_ELSE", 
		"T_WHILE", "T_FOR", "T_BREAK", "T_CONTINUE", "T_SWITCH", "T_CASE", "T_DEFAULT", 
		"T_RETURN", "T_LEFT_PAREN", "T_RIGHT_PAREN", "T_LEFT_BRACKET", "T_RIGHT_BRACKET", 
		"T_LEFT_CURLY", "T_RIGHT_CURLY", "T_CLOSURE_RETURN", "T_CLOSURE_CALL", 
		"T_NULL_COALESCE", "T_NULL_CONDITIONAL", "T_INT", "T_FLOAT", "T_VOID", 
		"T_ANY", "T_STRING", "T_BOOL", "INT", "HEX", "BINARY", "FLOAT", "T_FALSE", 
		"T_TRUE", "T_NULL", "T_QUOTES", "T_DOUBLE_QUOTES", "T_TRIPPLE_DOT", "T_DOUBLE_COLON", 
		"T_SEMICOLON", "T_PERIOD", "T_COMMA", "T_MULT", "T_DIV", "T_MOD", "T_NOT", 
		"T_PLUS", "T_MINUS", "T_INCREMENT", "T_DECREMENT", "T_BITWISE_AND", "T_BITWISE_XOR", 
		"T_BITWISE_OR", "T_SHIFTLEFT", "T_SHIFTRIGHT", "T_EQUALITY", "T_UNEQUALITY", 
		"T_MORE_THAN_OR_EQUALS", "T_LESS_THAN_OR_EQUALS", "T_MORE_THAN", "T_LESS_THAN", 
		"T_LOGICAL_AND", "T_LOGICAL_OR", "T_EQUALS", "T_PLUS_EQUALS", "T_MINUS_EQUALS", 
		"T_TIMES_EQUALS", "T_DIV_EQUALS", "T_MOD_EQUALS", "T_XOR_EQUALS", "T_AND_EQUALS", 
		"T_TILDE_EQUALS", "T_OR_EQUALS", "T_SHIFTLEFT_EQUALS", "T_SHIFTRIGHT_EQUALS", 
		"IDENT", "Whitespace", "Newline", "BlockComment", "LineComment", "ImportDirective"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "ZScript.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public ZScriptParser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramContext : ParserRuleContext {
		public ScriptBodyContext scriptBody() {
			return GetRuleContext<ScriptBodyContext>(0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZScriptListener typedListener = listener as IZScriptListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZScriptListener typedListener = listener as IZScriptListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 208; scriptBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ScriptBodyContext : ParserRuleContext {
		public FunctionDefinitionContext[] functionDefinition() {
			return GetRuleContexts<FunctionDefinitionContext>();
		}
		public FunctionDefinitionContext functionDefinition(int i) {
			return GetRuleContext<FunctionDefinitionContext>(i);
		}
		public GlobalVariableContext[] globalVariable() {
			return GetRuleContexts<GlobalVariableContext>();
		}
		public GlobalVariableContext globalVariable(int i) {
			return GetRuleContext<GlobalVariableContext>(i);
		}
		public ExportDefinitionContext[] exportDefinition() {
			return GetRuleContexts<ExportDefinitionContext>();
		}
		public ExportDefinitionContext exportDefinition(int i) {
			return GetRuleContext<ExportDefinitionContext>(i);
		}
		public ClassDefinitionContext[] classDefinition() {
			return GetRuleContexts<ClassDefinitionContext>();
		}
		public ClassDefinitionContext classDefinition(int i) {
			return GetRuleContext<ClassDefinitionContext>(i);
		}
		public SequenceBlockContext[] sequenceBlock() {
			return GetRuleContexts<SequenceBlockContext>();
		}
		public SequenceBlockContext sequenceBlock(int i) {
			return GetRuleContext<SequenceBlockContext>(i);
		}
		public TypeAliasContext[] typeAlias() {
			return GetRuleContexts<TypeAliasContext>();
		}
		public TypeAliasContext typeAlias(int i) {
			return GetRuleContext<TypeAliasContext>(i);
		}
		public ScriptBodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_scriptBody; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZScriptListener typedListener = listener as IZScriptListener;
			if (typedListener != null) typedListener.EnterScriptBody(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZScriptListener typedListener = listener as IZScriptListener;
			if (typedListener != null) typedListener.ExitScriptBody(this);
		}
	}

	[RuleVersion(0)]
	public ScriptBodyContext scriptBody() {
		ScriptBodyContext _localctx = new ScriptBodyContext(Context, State);
		EnterRule(_localctx, 2, RULE_scriptBody);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 218;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__1) | (1L << T_EXPORT) | (1L << T_FUNCTION) | (1L << T_SEQUENCE) | (1L << T_VAR) | (1L << T_LET))) != 0)) {
				{
				State = 216;
				switch (TokenStream.La(1)) {
				case T_FUNCTION:
					{
					State = 210; functionDefinition();
					}
					break;
				case T_VAR:
				case T_LET:
					{
					State = 211; globalVariable();
					}
					break;
				case T_EXPORT:
					{
					State = 212; exportDefinition();
					}
					break;
				case T__0:
					{
					State = 213; classDefinition();
					}
					break;
				case T_SEQUENCE:
					{
					State = 214; sequenceBlock();
					}
					break;
				case T__1:
					{
					State = 215; typeAlias();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 220;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassDefinitionContext : ParserRuleContext {
		public ClassNameContext className() {
			return GetRuleContext<ClassNameContext>(0);
		}
		public ClassBodyContext classBody() {
			return GetRuleContext<ClassBodyContext>(0);
		}
		public ClassInheritContext classInherit() {
			return GetRuleContext<ClassInheritContext>(0);
		}
		public ClassDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classDefinition; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZScriptListener typedListener = listener as IZScriptListener;
			if (typedListener != null) typedListener.EnterClassDefinition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZScriptListener typedListener = listener as IZScriptListener;
			if (typedListener != null) typedListener.ExitClassDefinition(this);
		}
	}

	[RuleVersion(0)]
	public ClassDefinitionContext classDefinition() {
		ClassDefinitionContext _localctx = new ClassDefinitionContext(Context, State);
		EnterRule(_localctx, 4, RULE_classDefinition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 221; Match(T__0);
			State = 222; className();
			State = 224;
			_la = TokenStream.La(1);
			if (_la==T_DOUBLE_COLON) {
				{
				State = 223; classInherit();
				}
			}

			State = 226; classBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassInheritContext : ParserRuleContext {
		public ClassNameContext className() {
			return GetRuleContext<ClassNameContext>(0);
		}
		public ClassInheritContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classInherit; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZScriptListener typedListener = listener as IZScriptListener;
			if (typedListener != null) typedListener.EnterClassInherit(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZScriptListener typedListener = listener as IZScriptListener;
			if (typedListener != null) typedListener.ExitClassInherit(this);
		}
	}

	[RuleVersion(0)]
	public ClassInheritContext classInherit() {
		ClassInheritContext _localctx = new ClassInheritContext(Context, State);
		EnterRule(_localctx, 6, RULE_classInherit);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 228; Match(T_DOUBLE_COLON);
			State = 229; className();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassNameContext : ParserRuleContext {
		public ITerminalNode IDENT() { return GetToken(ZScriptParser.IDENT, 0); }
		public ClassNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_className; } }
		public override void EnterRule(IParseTreeListener listener) {
			IZScriptListener typedListener = listener as IZScriptListener;
			if (typedListener != null) typedListener.EnterClassName(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IZScriptListener typedListener = listener as IZScriptListener;
			if (typedListener != null) typedListener.ExitClassName(this);
		}
	}
